--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mysytle.css">
-    <title>nptel practice</title>
+    <title>NPTEL practice</title>
 </head>
 <body>
     <div class="app">
         <h1>NPTEL practie quiz</h1>
         <div class="quiz">
             <h2 id="question">question</h2>
-            <div class="answer-buttons">
+            <div id="answer-buttons">
                 <button class="btn">ans 1</button>
                 <button class="btn">ans 2</button>
                 <button class="btn">ans 3</button>
@@ -20,5 +20,6 @@
             <button id="next-btn">next question</button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
