style: change styling for about page and nav bar

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <nav class="navbar">
         <ul>
             <li><a href="index.html" >Home</a></li>
-            <li><a href="#" onclick="loadContactPage()">Contact</a></li>
             <li><a href="#" onclick="loadAboutPage()">About</a></li>
+            <li><a href="#" onclick="loadContactPage()">Contact</a></li>
         </ul>
     </nav>
     <div class="app" id="content">
-        <h1>NPTEL practice quiz</h1>
+        <h1>NPTEL forest and their management practice quiz</h1>
         <div class="quiz">
             <h2 id="question">question</h2>
             <div id="answer-buttons">
